tests/typecheck/good/map_value_type_pair.scilexp
fun (m : Map Int64 (Pair Int32 (List Int32))) => m
