tests/typecheck/bad/bad_match.scilexp
fun (b : Bool) =>
  match b with
  | _invalid_name_because_of_leading_underscore => True
  end
